2.2.0/_sources/gallery/text_labels_and_annotations/mathtext_demo.rst.txt


.. _sphx_glr_gallery_text_labels_and_annotations_mathtext_demo.py:


=============
Mathtext Demo
=============

Use Matplotlib's internal LaTeX parser and layout engine.  For true LaTeX
rendering, see the text.usetex option.




.. image:: /gallery/text_labels_and_annotations/images/sphx_glr_mathtext_demo_001.png
    :align: center





.. code-block:: python


    import matplotlib.pyplot as plt

    fig, ax = plt.subplots()

    ax.plot([1, 2, 3], 'r', label=r'$\sqrt{x^2}$')
    ax.legend()

    ax.set_xlabel(r'$\Delta_i^j$', fontsize=20)
    ax.set_ylabel(r'$\Delta_{i+1}^j$', fontsize=20)
    ax.set_title(r'$\Delta_i^j \hspace{0.4} \mathrm{versus} \hspace{0.4} '
                 r'\Delta_{i+1}^j$', fontsize=20)

    tex = r'$\mathcal{R}\prod_{i=\alpha_{i+1}}^\infty a_i\sin(2 \pi f x_i)$'
    ax.text(1, 1.6, tex, fontsize=20, va='bottom')

    fig.tight_layout()
    plt.show()



.. only :: html

 .. container:: sphx-glr-footer


  .. container:: sphx-glr-download

     :download:`Download Python source code: mathtext_demo.py <mathtext_demo.py>`



  .. container:: sphx-glr-download

     :download:`Download Jupyter notebook: mathtext_demo.ipynb <mathtext_demo.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.readthedocs.io>`_
